- Strict doctor JSON output now includes `strict.status` and `strict.reasonCodes` for machine-readable release gating.
- Added smoke coverage for strict text mode failure path (`adapter doctor --text --strict` returns 40 and emits strict FAIL/reason lines).
- Added policy writer mode: `weftend adapter doctor --write-policy <path> [--include-missing-plugins]`.
- Policy writer now uses two-phase finalize (`<path>.stage -> <path>`) and fails closed with explicit write error on output failure.
- `verify:360:release:managed` now fails closed if the generated adapter maintenance policy file is missing after doctor write or if `adapter_maintenance.generated.json.stage` residue remains before strict doctor/verify continues.
- `--include-missing-plugins` now requires `--write-policy` (no more silent no-op flag usage).
- Adapter maintenance gate added (operator-controlled, fail-closed):
- `WEFTEND_ADAPTER_DISABLE=<adapter[,adapter...]>` disables selected adapter lanes without removing code.
- Optional file policy path: `WEFTEND_ADAPTER_DISABLE_FILE=<path-to-json>` with `{"disabledAdapters":[...]}`.
- Added maintenance policy template and reference docs:
- `policies/adapter_maintenance.example.json`
- `docs/ADAPTER_MAINTENANCE_POLICY.md`
- Unreadable maintenance policy files now surface deterministic file reason code details (`ADAPTER_POLICY_FILE_UNREADABLE`) through doctor and fail-closed adapter runs.
- Disabled adapter lanes fail closed with `ADAPTER_TEMPORARILY_UNAVAILABLE` and `ADAPTER_DISABLED_BY_POLICY`.
- Invalid disable-policy tokens fail closed with `ADAPTER_POLICY_INVALID`.
- Adapter maintenance/policy fail-closed paths now still write deterministic safe-run evidence artifacts (`safe_run_receipt.json`, `operator_receipt.json`, and analysis receipts) before returning precondition exit code.
- `container scan` fail-closed preconditions now also write deterministic evidence artifacts (`safe_run_receipt.json` and `operator_receipt.json`) before returning exit 40.