@@ -217,6 +217,7 @@ Any correction, hardening pass, or follow-up change is recorded in a newer chang
 - Added host CLI smoke assertions that host/operator receipt `.stage` files do not remain after finalize.
 
 ### Adapter maintenance controls
+- `verify:360:release:managed` now constrains `WEFTEND_360_OUT_ROOT` to the repo `out/` tree before cleanup, preventing recursive delete/write outside the managed verify workspace.
 - `verify:360:release:managed` now fails closed if the generated adapter maintenance policy file is missing after doctor write or if `adapter_maintenance.generated.json.stage` residue remains.
 - Root release packager now enforces a no-stage-residue invariant in the release output folder, failing closed if `*.stage` files or `__stage_release*` directories are present before or after packaging.
 - Root release packager now treats release sidecar docs as required artifacts (release notes, announcement, quickstart, alpha checklist, release history, changelog) and fails closed instead of warning/skipping when one is missing.
