@@ -156,6 +156,7 @@ Included
 - Added strict doctor mode: `weftend adapter doctor --strict` (fails closed on invalid policy state or unresolved missing-plugin requirements).
 - Strict doctor JSON output now includes `strict.status` and `strict.reasonCodes` for machine-readable release gating.
 - Added smoke coverage for strict text mode failure path (`adapter doctor --text --strict` returns 40 and emits strict FAIL/reason lines).
+- `verify:360:release:managed` now constrains `WEFTEND_360_OUT_ROOT` to the repo `out/` tree before cleanup, preventing recursive delete/write outside the managed verify workspace.
 - Added policy writer mode: `weftend adapter doctor --write-policy <path> [--include-missing-plugins]`.
 - Policy writer now uses two-phase finalize (`<path>.stage -> <path>`) and fails closed with explicit write error on output failure.
 - `verify:360:release:managed` now fails closed if the generated adapter maintenance policy file is missing after doctor write or if `adapter_maintenance.generated.json.stage` residue remains before strict doctor/verify continues.
